; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/extr_extension.c_vlclua_extension_get.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/extr_extension.c_vlclua_extension_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vlclua_extension_set = common dso_local global i32 0, align 4
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vlclua_extension_get(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @vlclua_extension_set, align 4
  %6 = call i32 @lua_pushlightuserdata(i32* %4, i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %9 = call i32 @lua_rawget(i32* %7, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @lua_topointer(i32* %10, i32 -1)
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %3, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @lua_pop(i32* %13, i32 1)
  %15 = load i32*, i32** %3, align 8
  ret i32* %15
}

declare dso_local i32 @lua_pushlightuserdata(i32*, i32) #1

declare dso_local i32 @lua_rawget(i32*, i32) #1

declare dso_local i64 @lua_topointer(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
